03-flux-apps/14.openbao/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openbao
  #labels:
  #  istio.io/dataplane-mode: ambient
