03-flux-apps/14.openbao/openbao-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openbao-ui-http
  namespace: openbao
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/instance: openbao
    component: server
  ports:
    - name: http
      protocol: TCP
      port: 8202
      targetPort: 8202
