03-flux-apps/14.openbao/http2.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: openbao
  namespace: openbao
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway-api
  hostnames:
    - vault.akna.one.pl
  rules:
    - backendRefs:
        - name: openbao-ui
          port: 8200
