03-flux-apps/14.openbao/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao
  namespace: openbao
  annotations:
    external-dns.alpha.kubernetes.io/hostname: vault.akna.one.pl
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway-api
  hostnames:
    - vault.akna.one.pl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: openbao-ui
          port: 8200
